--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             min-height: 100vh;
-            background: linear-gradient(45deg, #1a1a1a, #0066cc);
+            background: linear-gradient(45deg, #1a1a1a, #a0035c);
             display: flex;
             justify-content: center;
             align-items: center;
